--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
             <h1> Criado por Arthur Miguel Pondé Delmora</h1>
             <div class="Calculadora">
                 <h1>Calculadora</h1>
+                <p id="resultado">resultado</p>
+                <table>
+                    <tr>
+                        <td><button>C</button></td>
+                        <td><button><</button></td>
+                        <td><button>/</button></td>
+                        <td><button>X</button></td>
+                    </tr>
+                    <tr>
+                        <td><button>7</button></td>
+                        <td><button>8</button></td>
+                        <td><button>9</button></td>
+                        <td><button>-</button></td>
+                    </tr>
+                    <tr>
+                        <td><button>4</button></td>
+                        <td><button>5</button></td>
+                        <td><button>6</button></td>
+                        <td><button>+</button></td>
+                    </tr>
+                </table>
             </div>
        </div>
    </body>
