--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         <td><button class="botao" onclick="insert ('-')">-</button></td>
                     </tr>
                     <tr>
-                        <td><button class="botao"onclick="insert ('4')">-</button></td>>4</button></td>
-                        <td><button class="botao"onclick="insert ('5')">-</button></td>>5</button></td>
-                        <td><button class="botao"onclick="insert ('6')">-</button></td>>6</button></td>
-                        <td><button class="botao"onclick="insert ('+')">-</button></td>>+</button></td>
+                        <td><button class="botao"onclick="insert ('4')">4</button></td>
+                        <td><button class="botao"onclick="insert ('5')">5</button></td>
+                        <td><button class="botao"onclick="insert ('6')">6</button></td>
+                        <td><button class="botao"onclick="insert ('+')">+</button></td>
                     </tr>
                     <tr>
                         <td><button class="botao">1</button></td>
