--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <p id="resultado"></p>
                 <table>
                     <tr>
-                        <td><button class="botao">C</button></td>
-                        <td><button class="botao"><</button></td>
+                        <td><button class="botao" onclick="clean()">C</button></td>
+                        <td><button class="botao" onclick="back()"><</button></td>
                         <td><button class="botao" onclick="insert ('/')">/</button></td>
                         <td><button class="botao" onclick="insert ('*')">X</button></td>
                     </tr>
@@ -52,6 +52,14 @@
                 var numero=document.getElementById ('resultado').innerHTML;
                 document.getElementById ('resultado'). innerHTML = numero+num;
             }
+            function clean ()
+                                {
+                                    document.getElementById('resultado').innerHTML="";
+                                }
+                                function back()
+                                {
+                                    var resultado = document.getElementById('resultado').innerHTML;
+                                }
         </script>
     </body>
 </html>
