--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
                         <td><button class="botao"onclick="insert ('+')">+</button></td>
                     </tr>
                     <tr>
-                        <td><button class="botao">1</button></td>
-                        <td><button class="botao">2</button></td>
-                        <td><button class="botao">3</button></td>
-                        <td rowspan="2"><button class="botao" style="height: 106px;">=</button></td>
+                        <td><button class="botao" onclick="insert ('1')">1</button></td>
+                        <td><button class="botao" onclick="insert ('2')">2</button></td>
+                        <td><button class="botao" onclick="insert ('3')">3</button></td>
+                        <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><button class="botao" style="width: 106px;">0</button></td>
+                        <td colspan="2"><button class="botao" style="width: 106px;" onclick="insert('0')">0</button></td>
                         <td><button class="botao">.</button></td>
                     </tr>
+                    
                 </table>
             </div>
         </div>
@@ -59,6 +60,19 @@
                                 function back()
                                 {
                                     var resultado = document.getElementById('resultado').innerHTML;
+                                    document.getElementById('resultado').innerHTML= resultado.substring(0, resultado.length-1);
+                                }
+                                function calcular ()
+                                {
+                                    var resultado = document.getElementById('resultado').innerHTML;
+                                    if (resultado)
+                                    {
+                                        document.getElementById('resultado').innerHTML = eval(resultado);
+                                    }
+                                    else
+                                    {
+                                        document.getElementById('resultado').innerHTML = "Nada para calcular"
+                                    }
                                 }
         </script>
     </body>
